try to avoid Bug 55914 - [C++11] Pack expansion fails in lambda expressions

see https://gcc.gnu.org/bugzilla/show_bug.cgi?id=55914